fixed #139 darkmode readability for FAQ page

--- a/Public/styles/FAQ.css
+++ b/Public/styles/FAQ.css
@@ -70,7 +70,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     text-align: center;
-
+    color: var(--navbar-labels);
 }
 
 
@@ -118,6 +118,12 @@ details + details {
 summary {
     list-style: none;
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 22px;
+    letter-spacing: 1px; 
+    line-height: 1.8;
+    color: var(--navbar-labels);    
 }
 
 summary::-webkit-details-marker {
@@ -140,8 +146,8 @@ summary:before {
     content: "↓";
     width: 1.75rem;
     height: 1.75rem;
-    background-color: #000;
-    color: #FFF;
+    background-color: black;
+    color: white;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -149,7 +155,7 @@ summary:before {
 }
 
 details[open] summary {
-    background-color: #eee;
+    background-color: var(--navbar);
 }
 
 details[open] summary:before {
@@ -157,6 +163,6 @@ details[open] summary:before {
 }
 
 summary:hover {
-    background-color: #eee;
+    background-color: var(--navbar);
 }
 
